--- a/index.html
+++ b/index.html
@@ -219,6 +219,24 @@
             </main>
         </div>
 
+        <!-- Focused Gantt View -->
+        <div id="focusedGanttView" class="view hidden">
+            <header class="header">
+                <button class="icon-btn" id="backFromGanttBtn">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M19 12H5M12 19l-7-7 7-7" />
+                    </svg>
+                </button>
+                <div class="header-title">今日時程細節</div>
+                <div style="width:24px;"></div>
+            </header>
+            <div class="content">
+                <div id="focusedGanttList" class="focused-list">
+                    <!-- Dynamic Content -->
+                </div>
+            </div>
+        </div>
+
         <!-- Detail Modal (Global) -->
         <div id="detailModal" class="modal hidden">
             <div class="modal-content">
