--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                     </section>
 
                     <nav class="main-nav">
+                        <button id="navDataBtn" class="nav-btn btn-secondary">數據</button>
                         <button id="navAddBtn" class="nav-btn btn-primary">新增選項</button>
                         <button id="navScheduleBtn" class="nav-btn btn-secondary">每日行程</button>
                     </nav>
@@ -233,6 +234,34 @@
             <div class="content">
                 <div id="focusedGanttList" class="focused-list">
                     <!-- Dynamic Content -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Data Analysis View -->
+        <div id="dataView" class="view hidden">
+            <header class="header">
+                <button class="icon-btn" id="backFromDataBtn">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M19 12H5M12 19l-7-7 7-7" />
+                    </svg>
+                </button>
+                <div class="header-title">數據統計</div>
+                <div style="width:24px;"></div>
+            </header>
+            <div class="content" style="padding:16px;">
+                <h3 id="dataDateLabel" style="text-align:center; margin-bottom:16px; color:var(--text-secondary);"></h3>
+
+                <div class="data-summary-card">
+                    <span>昨日總結</span>
+                    <span id="dataTotalChange" class="price-value" style="font-size:1.5rem;">+0</span>
+                </div>
+
+                <div class="column-header" style="margin-top:20px; text-align:left;">
+                    <h2>詳細紀錄</h2>
+                </div>
+                <div id="dataList" class="task-list">
+                    <!-- JS Injected -->
                 </div>
             </div>
         </div>
