Fix blank screen and enhance mission tasks and data view

--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@
                     </div>
 
                     <div class="form-group">
+                        <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                            <input type="checkbox" id="isMission" style="width: auto;">
+                            <span>任務性 (未完成即持續出現)</span>
+                        </label>
+                    </div>
+
+                    <div class="form-group">
                         <label for="score">分數 (正負皆可)</label>
                         <input type="number" id="score" required placeholder="例如：5 或 -5">
                     </div>
@@ -240,7 +247,7 @@
 
         <!-- Data Analysis View -->
         <div id="dataView" class="view hidden">
-            <header class="header">
+            <header class="header sub-page-header">
                 <button class="icon-btn" id="backFromDataBtn">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M19 12H5M12 19l-7-7 7-7" />
@@ -249,21 +256,27 @@
                 <div class="header-title">數據統計</div>
                 <div style="width:24px;"></div>
             </header>
-            <div class="content" style="padding:16px;">
+            <main class="content" style="padding:16px;">
                 <h3 id="dataDateLabel" style="text-align:center; margin-bottom:16px; color:var(--text-secondary);"></h3>
 
                 <div class="data-summary-card">
-                    <span>昨日總結</span>
-                    <span id="dataTotalChange" class="price-value" style="font-size:1.5rem;">+0</span>
+                    <div class="summary-item">
+                        <span class="label">昨日總結</span>
+                        <span id="dataTotalChange" class="price-value">+0</span>
+                    </div>
                 </div>
 
                 <div class="column-header" style="margin-top:20px; text-align:left;">
-                    <h2>詳細紀錄</h2>
+                    <h2 style="font-size: 1.1rem;">異動詳細紀錄</h2>
                 </div>
-                <div id="dataList" class="task-list">
-                    <!-- JS Injected -->
+                <div id="dataTableContainer" class="data-table-container">
+                    <!-- Table injected via JS -->
                 </div>
-            </div>
+
+                <div class="form-actions-page" style="margin-top: 30px;">
+                    <button type="button" id="bottomBackFromDataBtn" class="btn-back">上一頁</button>
+                </div>
+            </main>
         </div>
 
         <!-- Detail Modal (Global) -->
