Integrated Mission feature and Comprehensive Accounting System

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <!-- Search Bar -->
                 <div class="search-container"
                     style="margin-top: 16px; display: flex; justify-content: center; gap: 8px;">
+                    <button id="navAccountingBtn" class="btn-secondary"
+                        style="padding: 8px 16px; font-size: 0.9rem;">記帳</button>
                     <input type="date" id="searchDateInput" style="padding: 8px; width: auto;">
                     <button id="searchBtn" class="btn-primary" style="padding: 8px 16px; font-size: 0.9rem;">搜尋</button>
                 </div>
@@ -63,8 +65,15 @@
                         <canvas id="ganttChart"></canvas>
                     </div>
 
+                    <nav class="main-nav"
+                        style="margin: 20px 0; position: static; width: auto; padding: 0; background: transparent; border: none;">
+                        <button id="navDataBtn" class="nav-btn btn-secondary">數據</button>
+                        <button id="navAddBtn" class="nav-btn btn-primary">新增選項</button>
+                        <button id="navScheduleBtn" class="nav-btn btn-secondary">每日行程</button>
+                    </nav>
+
                     <!-- Tasks Section (3 Columns) -->
-                    <section class="tasks-section" style="margin-top: 20px;">
+                    <section class="tasks-section">
                         <!-- 1. Daily Routine (Left) -->
                         <div class="tasks-column">
                             <div class="column-header">
@@ -96,11 +105,6 @@
                         </div>
                     </section>
 
-                    <nav class="main-nav">
-                        <button id="navDataBtn" class="nav-btn btn-secondary">數據</button>
-                        <button id="navAddBtn" class="nav-btn btn-primary">新增選項</button>
-                        <button id="navScheduleBtn" class="nav-btn btn-secondary">每日行程</button>
-                    </nav>
             </main>
         </div>
 
@@ -340,6 +344,13 @@
                         </div>
                     </div>
 
+                    <div class="form-group">
+                        <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                            <input type="checkbox" id="editIsMission" style="width: auto;">
+                            <span>任務性 (未完成即持續出現)</span>
+                        </label>
+                    </div>
+
                     <div class="form-actions-page" style="margin-top: 10px;">
                         <button type="submit" class="btn-confirm">儲存變更</button>
                         <button type="button" id="cancelEditBtn" class="btn-cancel">取消</button>
@@ -357,6 +368,179 @@
                     <button id="btnEditSingle" class="btn-primary" style="background: #f59e0b;">僅此項目 (今日)</button>
                     <button id="btnEditFuture" class="btn-primary">此項目與之後 (未來)</button>
                     <button id="btnCancelEditScope" class="btn-cancel">取消</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Accounting View -->
+        <div id="accountingView" class="view hidden">
+            <header class="header">
+                <button class="icon-btn" id="backFromAccountingBtn">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M19 12H5M12 19l-7-7 7-7" />
+                    </svg>
+                </button>
+                <div class="header-title">記帳系統</div>
+                <div style="display: flex; gap: 8px;">
+                    <button id="openAccountingEntryBtn" class="icon-btn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M12 5v14M5 12h14" />
+                        </svg>
+                    </button>
+                    <button id="openAccountingSettingsBtn" class="icon-btn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path
+                                d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.1a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z" />
+                            <circle cx="12" cy="12" r="3" />
+                        </svg>
+                    </button>
+                </div>
+            </header>
+            <main class="content" style="padding: 16px;">
+                <!-- Summary Cards -->
+                <div class="accounting-summary-grid">
+                    <div id="incomeCard" class="accounting-card income">
+                        <span class="label">可用總額</span>
+                        <div id="totalBalance" class="value">0</div>
+                    </div>
+                    <div id="expenseCard" class="accounting-card expense">
+                        <span class="label">本月支出</span>
+                        <div id="monthExpense" class="value">0</div>
+                    </div>
+                </div>
+
+                <!-- Charts Section -->
+                <div class="accounting-charts-container">
+                    <div class="chart-box">
+                        <h3>金額明細 (折線圖)</h3>
+                        <canvas id="accountingLineChart"></canvas>
+                    </div>
+                    <div class="chart-box">
+                        <h3>支出分布 (類別)</h3>
+                        <div class="pie-container" style="display: flex; align-items: center; gap: 16px;">
+                            <canvas id="accountingPieChart" style="max-width: 150px;"></canvas>
+                            <div id="pieLegend" class="pie-legend"></div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+
+        <!-- Accounting Entry Modal -->
+        <div id="accountingEntryModal" class="modal hidden">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>新增紀錄</h3>
+                    <button id="closeAccountingEntryBtn" class="close-btn">&times;</button>
+                </div>
+                <form id="accountingEntryForm" class="form-content" style="padding: 0; margin-top: 12px; gap: 12px;">
+                    <div class="form-group">
+                        <label for="accAmount">金額 (正數為收入，負數為支出)</label>
+                        <input type="number" id="accAmount" required step="0.01" placeholder="例如: 500 或 -100">
+                    </div>
+                    <div class="form-group">
+                        <label for="accCategory">項目名稱 (類別)</label>
+                        <select id="accCategory">
+                            <!-- Injected via JS -->
+                            <option value="custom">自訂</option>
+                        </select>
+                    </div>
+                    <div id="accCustomNameGroup" class="form-group hidden">
+                        <label for="accCustomName">自訂名稱</label>
+                        <input type="text" id="accCustomName" placeholder="輸入名稱">
+                    </div>
+                    <div class="form-group">
+                        <label for="accBank">選擇銀行</label>
+                        <select id="accBank">
+                            <!-- Injected via JS -->
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="accDate">日期</label>
+                        <input type="date" id="accDate" required>
+                    </div>
+                    <div class="form-actions-page">
+                        <button type="submit" class="btn-confirm">儲存</button>
+                        <button type="button" id="cancelAccEntryBtn" class="btn-cancel">取消</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <!-- Accounting Settings Modal -->
+        <div id="accountingSettingsModal" class="modal hidden">
+            <div class="modal-content" style="max-height: 80vh; overflow-y: auto;">
+                <div class="modal-header">
+                    <h3>記帳設定</h3>
+                    <button id="closeAccSettingsBtn" class="close-btn">&times;</button>
+                </div>
+                <section class="settings-section">
+                    <h4>銀行管理</h4>
+                    <div id="bankList" class="settings-list"></div>
+                    <button id="addBankBtn" class="btn-secondary small">新增銀行</button>
+                </section>
+                <section class="settings-section" style="margin-top: 20px;">
+                    <h4>類別管理</h4>
+                    <div id="categoryList" class="settings-list"></div>
+                    <button id="addCategoryBtn" class="btn-secondary small">新增類別</button>
+                </section>
+                <div class="form-actions-page" style="margin-top: 20px;">
+                    <button type="button" id="closeAccSettingsBottomBtn" class="btn-back">關閉</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Accounting Bank/Income Detail Modal -->
+        <div id="accountingBankModal" class="modal hidden">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>總預算明細</h3>
+                    <button id="closeAccBankBtn" class="close-btn">&times;</button>
+                </div>
+                <div class="detail-section">
+                    <h4>各銀行餘額</h4>
+                    <div id="bankBalanceList" class="detail-list"></div>
+                </div>
+                <div class="detail-section" style="margin-top: 20px;">
+                    <h4>入帳原因紀錄</h4>
+                    <div id="incomeHistoryList" class="detail-list"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Accounting Expense Calendar Modal -->
+        <div id="accountingExpenseModal" class="modal hidden">
+            <div class="modal-content" style="max-width: 95%; max-height: 90vh; overflow-y: auto;">
+                <div class="modal-header">
+                    <button id="closeAccExpenseBtn" class="icon-btn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M19 12H5M12 19l-7-7 7-7" />
+                        </svg>
+                    </button>
+                    <h3 style="flex: 1; text-align: center;">支出明細</h3>
+                    <div style="width: 40px;"></div> <!-- Spacer -->
+                </div>
+                <div id="accCalendarHeader" class="calendar-header" style="margin-top: 10px;">
+                    <button id="prevAccMonthBtn">&lt;</button>
+                    <h3 id="currentAccMonthLabel"></h3>
+                    <button id="nextAccMonthBtn">&gt;</button>
+                </div>
+                <div id="accCalendarGrid" class="calendar-grid"></div>
+
+                <div id="accMonthlyListContainer" class="detail-section" style="margin-top: 24px;">
+                    <h4>本月所有支出清單</h4>
+                    <div id="accMonthlyList" class="detail-list"></div>
+                </div>
+
+                <div id="accDayDetail" class="detail-list hidden"
+                    style="margin-top: 16px; border-top: 1px dashed var(--border-color); padding-top: 16px;">
+                    <div class="modal-header" style="border: none; padding: 0; margin-bottom: 8px;">
+                        <h4 id="accDayLabel"></h4>
+                    </div>
+                    <div id="accDayList"></div>
                 </div>
             </div>
         </div>
