--- a/index.html
+++ b/index.html
@@ -438,37 +438,35 @@
                 <form id="accountingEntryForm" class="form-content" style="padding: 0; margin-top: 12px; gap: 12px;">
                     <div class="form-group">
                         <label for="accAmount">金額 (正數為收入，負數為支出)</label>
-                        <input type="number" id="accAmount" required step="0.01" placeholder="例如: 500 或 -100">
-                    </div>
-                    <div class="form-group">
-                        <label for="accManualName">項目名稱 (手動輸入)</label>
-                        <input type="text" id="accManualName" placeholder="例如: 買午餐 (優先使用此項)">
-                    </div>
-                    <div class="form-group">
-                        <label for="accCategory">或選擇現有清單</label>
-                        <select id="accCategory">
-                            <!-- Injected via JS -->
-                            <option value="custom">自訂</option>
-                        </select>
-                    </div>
-                    <div id="accCustomNameGroup" class="form-group hidden">
-                        <label for="accCustomName">管理自訂名稱</label>
-                        <input type="text" id="accCustomName" placeholder="輸入名稱">
-                    </div>
-                    <div class="form-group">
-                        <label for="accBank">選擇銀行</label>
-                        <select id="accBank">
-                            <!-- Injected via JS -->
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="accDate">日期</label>
-                        <input type="date" id="accDate" required>
-                    </div>
-                    <div class="form-actions-page">
-                        <button type="submit" class="btn-confirm">儲存</button>
-                        <button type="button" id="cancelAccEntryBtn" class="btn-cancel">取消</button>
-                    </div>
+                        <div class="form-group">
+                            <label for="accManualName">項目名稱 (可不填)</label>
+                            <input type="text" id="accManualName" placeholder="例如: 某某店午餐">
+                        </div>
+                        <div class="form-group">
+                            <label for="accCategory">選擇類別</label>
+                            <select id="accCategory">
+                                <!-- Injected via JS -->
+                                <option value="custom">自訂</option>
+                            </select>
+                        </div>
+                        <div id="accCustomNameGroup" class="form-group hidden">
+                            <label for="accCustomName">管理自訂類別</label>
+                            <input type="text" id="accCustomName" placeholder="輸入新的類別名稱">
+                        </div>
+                        <div class="form-group">
+                            <label for="accBank">選擇銀行</label>
+                            <select id="accBank">
+                                <!-- Injected via JS -->
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="accDate">日期</label>
+                            <input type="date" id="accDate" required>
+                        </div>
+                        <div class="form-actions-page">
+                            <button type="submit" class="btn-confirm">儲存</button>
+                            <button type="button" id="cancelAccEntryBtn" class="btn-cancel">取消</button>
+                        </div>
                 </form>
             </div>
         </div>
